@@ -280,7 +280,7 @@ dupe_record_t *dupecheck_aprs(dupecheck_t *dpc,
  *  dupecheck_pbuf() returns pointer to dupe record, if pbuf is
  *  a duplicate.  Otherwise it return a NULL.
  */
-dupe_record_t *dupecheck_pbuf(dupecheck_t *dpc, struct pbuf_t *pb)
+dupe_record_t *dupecheck_pbuf(dupecheck_t *dpc, struct pbuf_t *pb, const int viscous_delay)
 {
 	int i;
 	uint32_t hash, idx;
@@ -400,7 +400,10 @@ dupe_record_t *dupecheck_pbuf(dupecheck_t *dpc, struct pbuf_t *pb)
 			    memcmp(addr, dp->addresses, addrlen) == 0 &&
 			    memcmp(data, dp->packet,    datalen) == 0) {
 				// PACKET MATCH!
-				dp->seen += 1;
+				if (viscous_delay > 0)
+				  dp->delayed_seen += 1;
+				else
+				  dp->seen += 1;
 				return dp;
 			}
 			// no packet match.. check next
@@ -422,13 +425,20 @@ dupe_record_t *dupecheck_pbuf(dupecheck_t *dpc, struct pbuf_t *pb)
 	memcpy(dp->packet,    data, datalen);
 
 	dp->pbuf  = pbuf_get(pb); // increments refcount
-	dp->seen  = 1;  // First observation gets number 1
+	if (viscous_delay > 0) {  // First observation gets number 1
+	  dp->seen         = 0;
+	  dp->delayed_seen = 1;
+	  dp->pbuf         = pb;
+	} else {
+	  dp->seen         = 1;
+	  dp->delayed_seen = 0;
+	}
 
 	dp->hash  = hash;
 	dp->t     = now;
 	dp->t_exp = now + dupefilter_storetime;
 
-	return NULL;
+	return dp;
 }
 
 /*
